Complete CreateAccount UI

--- a/HWKurylenka_15_RegistrationApp/HWKurylenka_15_RegistrationApp/Views/Base.lproj/LaunchScreen.storyboard
+++ b/HWKurylenka_15_RegistrationApp/HWKurylenka_15_RegistrationApp/Views/Base.lproj/LaunchScreen.storyboard
@@ -17,11 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In Sign Up App" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NvZ-sR-txM">
-                                <rect key="frame" x="88.333333333333329" y="348.66666666666669" width="216.33333333333337" height="180.00000000000006"/>
+                                <rect key="frame" x="88.000000000000014" y="348" width="217.33333333333337" height="181"/>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                 <fontDescription key="fontDescription" name="HoeflerText-BlackItalic" family="Hoefler Text" pointSize="60"/>
                                 <color key="textColor" systemColor="systemCyanColor"/>
                                 <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <size key="shadowOffset" width="1" height="1"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
